# beHydra

./: README.md  activate.bat  create_env.bat  pyproject.toml  requirements.txt
libs/: __init__.py  beHydra.ini
libs/beAudioProc/: beAudioProcessing.py  beAudioProcessing.pyi
libs/beAudioProc/pyarmor_runtime_000000/: __init__.py
libs/beAudioProc/pyarmor_runtime_000000/windows_x86/: pyarmor_runtime.pyd
libs/beAudioProc/pyarmor_runtime_000000/windows_x86_64/: pyarmor_runtime.pyd
libs/beComms/: __init__.py  be_Comms_Utils.py  be_Hydra.py  be_Hydra.pyi  be_adcRead.py  be_bredr.py  be_bredr.pyi  be_bt_serial_msgs.py  be_bt_utils.py  be_codec.py  be_codec.pyi  be_codec_serial_msgs.py  be_command_list.py  be_gpio.py  be_gpio_serial_msgs.py  be_i2c_serial_msgs.py  be_i2s.py  be_i2s.pyi  be_i2s_serial_msgs.py  be_leAudio.py  be_leAudio_serial_msgs.py  be_pcm.py  be_pcm_serial_msgs.py  be_pdm.py  be_pdm.pyi  be_pdm_serial_msgs.py  be_spdif.py  be_spdif.pyi  be_spdif_serial_msgs.py  be_tone.py  be_tone.pyi  be_tone_serial_msgs.py  be_usbAudio.py  be_usbAudio.pyi  be_usbAudio_serial_msgs.py
libs/beComms/pyarmor_runtime_000000/: __init__.py  pyarmor_runtime.pyd
libs/beUsbUtils/: __init__.py  be_usb_cdc.py  be_usb_gui.py
libs/beUsbUtils/pyarmor_runtime_000000/: __init__.py  pyarmor_runtime.pyd
src/: BluetoothSource_bredr_sample.py  Example_USBAudioToA2DP.py  Example_USBAudioToAGHFP.py  Example_USBAudioToAnalogue.py  example.py
src/Automated_Tests/Latency_Measurement/: Analogue_Latency_Measurement.py
(+4 files in other folders)
