[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beHydra"
version = "0.1.0"
description = "Internal libraries for beHydra testing and comms"
requires-python = ">=3.11"
dependencies = [
                "pyserial==3.5",
                "serial==0.0.97",
                "matplotlib==3.8.4",
                "numpy==1.26.4",
                "scipy==1.17.1",
                "sounddevice==0.5.5"
                ] # Python dependencies

[tool.setuptools.packages.find]
where = ["."]
include = ["libs*", "src*"]